WIP share lists

--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "groceries-shopping-list",
+    "name": "Shopping List",
     "slug": "groceries-shopping-list",
     "version": "1.0.0",
     "orientation": "portrait",
