--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.19",
     "expo-blur": "~14.0.1",
+    "expo-camera": "~16.0.10",
     "expo-clipboard": "~7.0.0",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
