--- a/client/app.json
+++ b/client/app.json
@@ -43,6 +43,12 @@
           }
         }
       ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to scan QR codes"
+        }
+      ],
       "expo-sqlite",
       "expo-secure-store"
     ],
