--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
+    "expo-network": "~7.0.4",
     "expo-router": "~4.0.13",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.18",
@@ -47,6 +48,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "reconnecting-websocket": "^4.4.0",
     "tinybase": "^5.4.2"
   },
   "devDependencies": {
