--- a/client/app.json
+++ b/client/app.json
@@ -24,7 +24,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -65,6 +69,12 @@
       "eas": {
         "projectId": "7428a2a2-f953-4c9f-8be3-74117e5fdc8d"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/7428a2a2-f953-4c9f-8be3-74117e5fdc8d"
     }
   }
 }
