--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.20",
+    "expo-application": "~6.0.1",
     "expo-blur": "~14.0.1",
     "expo-camera": "~16.0.10",
     "expo-clipboard": "~7.0.0",
