--- a/client/package.json
+++ b/client/package.json
@@ -39,10 +39,12 @@
     "expo-system-ui": "~4.0.6",
     "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
+    "onesignal-expo-plugin": "^2.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-onesignal": "^5.2.8",
     "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
