--- a/client/eas.json
+++ b/client/eas.json
@@ -20,6 +20,11 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "android": {
+        "serviceAccountKeyPath": "./PlayStoreServiceAccount.json",
+        "track": "internal"
+      }
+    }
   }
 }
