Add edge to edge

--- a/client/app.json
+++ b/client/app.json
@@ -25,10 +25,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "permissions": [
-        "android.permission.CAMERA",
-        "android.permission.RECORD_AUDIO"
-      ]
+      "package": "com.betoatexpo.groceriesshoppinglist"
     },
     "web": {
       "bundler": "metro",
@@ -54,6 +51,15 @@
         "expo-camera",
         {
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to scan QR codes"
+        }
+      ],
+      [
+        "react-native-edge-to-edge",
+        {
+          "android": {
+            "parentTheme": "Default",
+            "enforceNavigationBarContrast": true
+          }
         }
       ],
       "expo-sqlite",
