--- a/client/app.json
+++ b/client/app.json
@@ -19,6 +19,11 @@
       },
       "config": {
         "usesNonExemptEncryption": false
+      },
+      "entitlements": {
+        "com.apple.security.application-groups": [
+          "group.com.betoatexpo.groceries-shopping-list"
+        ]
       }
     },
     "android": {
