--- a/client/eas.json
+++ b/client/eas.json
@@ -17,6 +17,14 @@
     "production": {
       "autoIncrement": true,
       "channel": "production"
+    },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "environment": "development"
     }
   },
   "submit": {
