--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.4",
     "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.11",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
