add google icon and deploy script

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "ios": "expo run:ios",
     "prewidget": "npx expo prebuild --template node_modules/@bacons/apple-targets/prebuild-blank.tgz --clean",
     "web": "expo start --web",
+    "deploy": "npx expo export -p web && eas deploy --prod",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
