--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "expo-system-ui": "~4.0.7",
     "expo-updates": "~0.26.12",
     "expo-web-browser": "~14.0.2",
+    "lodash": "^4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
