--- a/client/.env.example
+++ b/client/.env.example
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
-EXPO_PUBLIC_SYNC_SERVER_URL=
+# EXPO_PUBLIC_SYNC_SERVER_URL=
+
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZmxleGlibGUtbGFyay0yMS5jbGVyay5hY2NvdW50cy5kZXYk
