--- a/client/package.json
+++ b/client/package.json
@@ -19,43 +19,43 @@
   "dependencies": {
     "@bacons/apple-targets": "^0.2.0",
     "@clerk/clerk-expo": "^2.8.0",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.25",
-    "expo-application": "~6.0.2",
-    "expo-blur": "~14.0.2",
-    "expo-camera": "~16.0.11",
-    "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.4",
-    "expo-crypto": "~14.0.2",
-    "expo-dev-client": "~5.0.11",
-    "expo-font": "~13.0.3",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.4",
-    "expo-network": "~7.0.5",
-    "expo-router": "~4.0.16",
-    "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.20",
-    "expo-sqlite": "~15.0.6",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-updates": "~0.26.12",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.7",
+    "expo-application": "~6.1.4",
+    "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-clipboard": "~7.1.4",
+    "expo-constants": "~17.1.5",
+    "expo-crypto": "~14.1.4",
+    "expo-dev-client": "~5.1.8",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-network": "~7.1.5",
+    "expo-router": "~5.0.5",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.8",
+    "expo-sqlite": "~15.2.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-updates": "~0.28.12",
+    "expo-web-browser": "~14.1.6",
     "lodash": "^4.17.21",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-edge-to-edge": "^1.4.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-edge-to-edge": "1.6.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-qrcode-svg": "^6.3.12",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0-beta.17",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "reconnecting-websocket": "^4.4.0",
     "tinybase": "^5.4.2"
   },
@@ -63,12 +63,12 @@
     "@babel/core": "^7.25.2",
     "@clerk/types": "^4.47.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~53.0.4",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
